--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>INSERT TITLE</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="">
+		<link rel="stylesheet" type="text/css" href="./main.css">
 		<!-- link to icon -->
 		<link rel="shortcut icon" type="image/x-icon" href="">
 	</head>
@@ -15,8 +15,8 @@
 				</h1>
 			</div><!-- /.homepage-title -->
 			<div class="homepage-header">   
-				<a href="/project_idea" ><font color="white">Home</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="" ><font color="white">About Us</font></a>
+				<a href="./" ><font color="black">Home</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="" ><font color="black">About Us</font></a>
 			 </div><!-- /.homepage-header -->
 		</div><!-- /.centering-container -->
          
