--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div><!-- /.centering-container -->
          
 		<div class="centering-container">
-			<div class="homepage-reviews-title">
+			<div class="">
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <!-- Paypal Doate Button-->
         		<input type="hidden" name="cmd" value="_s-xclick" />
         		<input type="hidden" name="hosted_button_id" value="NZNZ9WBZEPQ6L" />
