--- a/index.html
+++ b/index.html
@@ -21,14 +21,22 @@
 		</div><!-- /.centering-container -->
          
 		<div class="centering-container">
-			<div class="">
-				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <!-- Paypal Doate Button-->
-        		<input type="hidden" name="cmd" value="_s-xclick" />
-        		<input type="hidden" name="hosted_button_id" value="NZNZ9WBZEPQ6L" />
-        		<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-        		<img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
-        		</form><!--Paypal Doate Button-->
-
+			<div class="buisness-container">
+				<span class="buisness-image">
+					<img src="./images/coffee1.jpg" />
+				</span>
+				<span class="buisness-text">
+					<p>Short text about buisness here</p>
+				</span>
+				<span class="buisness-donate-button">
+					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <!-- Paypal Doate Button-->
+        			<input type="hidden" name="cmd" value="_s-xclick" />
+        			<input type="hidden" name="hosted_button_id" value="NZNZ9WBZEPQ6L" />
+        			<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+					<img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
+					</span>
+				</form><!--Paypal Doate Button-->
+			</div>
 		</div><br><br><br><br><br><br><br><!-- /.centering-container -->
 	</body>
 </html><!-- Coded By Isaac Oldwood https://isaacoldwood.github.io/ -->
