--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 				<a href="" ><font color="black">About Us</font></a>
 			 </div><!-- /.homepage-header -->
 		</div><!-- /.centering-container -->
-         
+        <br> <br> <br>
 		<div class="centering-container">
 			<div class="buisness-container">
-				<span class="buisness-image">
-					<img src="./images/coffee1.jpg" />
-				</span>
+				<img src="./images/coffee1.jpg" width="480" height="320" />
 				<span class="buisness-text">
 					<p>Short text about buisness here</p>
 				</span>
