--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <br> <br> <br>
 		<div class="centering-container">
 			<div class="buisness-container">
-				<img src="./images/coffee1.jpg" width="480" height="320" />
+				<img src="./images/coffee1.jpg" width="240" height="160" align="left" />
 				<span class="buisness-text">
-					<p>Short text about buisness here</p>
+					Short text about buisness here
 				</span>
 				<span class="buisness-donate-button">
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <!-- Paypal Doate Button-->
+					<form class="form-inline" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <!-- Paypal Doate Button-->
         			<input type="hidden" name="cmd" value="_s-xclick" />
         			<input type="hidden" name="hosted_button_id" value="NZNZ9WBZEPQ6L" />
         			<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
