--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 			<div class="buisness-container">
 				<img src="./images/coffee1.jpg" width="240" height="160" align="left" />
 				<span class="buisness-text">
-					Short text about buisness here
+					<h4>Buissness Title</h4>
+					<p>WE ARE 200 DEGREES COFFEE, specialist coffee roasters and unashamed coffee geeks. Our aim is to create the perfect cup of coffee so we ship the finest green beans from Rainforest Alliance farms back to the UK where tweed-clad artisans use the traditional art of roasting (at 200° Centigrade) to give a full bodied, smoother taste.
+					</p>
 				</span>
-				<span class="buisness-donate-button">
-					<form class="form-inline" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <!-- Paypal Doate Button-->
+				<form class="buisness-donate-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <!-- Paypal Doate Button-->
         			<input type="hidden" name="cmd" value="_s-xclick" />
         			<input type="hidden" name="hosted_button_id" value="NZNZ9WBZEPQ6L" />
         			<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 					<img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
-					</span>
 				</form><!--Paypal Doate Button-->
 			</div>
 		</div><br><br><br><br><br><br><br><!-- /.centering-container -->
