Change to allignment

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						</p>
 					</span>
 				</div>
-				<div class="buisness-div">
-					<form class="buisness-donate-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <!-- Paypal Doate Button-->
+				<div class="buisness-donate-button">
+					<form  action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"> <!-- Paypal Doate Button-->
         				<input type="hidden" name="cmd" value="_s-xclick" />
         				<input type="hidden" name="hosted_button_id" value="NZNZ9WBZEPQ6L" />
         				<input  type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
