--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 					TITLE HERE
 				</h1>
 			</div><!-- /.homepage-title -->
-			<div class="homepage-header">   
+			<div class="homepage-navbar">   
 				<a href="./" ><font color="black">Home</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="" ><font color="black">About Us</font></a>
 			 </div><!-- /.homepage-header -->
 		</div><!-- /.centering-container -->
-        <br> <br> <br>
+		<div class="space-for-header"></div>
 		<div class="centering-container">
 			<div class="buisness-container" style="display: flex; justify-content: space-around">
 				<div class="buisness-div">
@@ -84,6 +84,8 @@
 				</div>
 			</div>
 		</div><!-- /.centering-container -->
+		<br>
+		<br>
 		<div class="centering-container">
 			<div class="buisness-container" style="display: flex; justify-content: space-around">
 				<div class="buisness-div">
@@ -104,6 +106,8 @@
 				</div>
 			</div>
 		</div><!-- /.centering-container -->
+		<br>
+		<br>
 		<div class="centering-container">
 			<div class="buisness-container" style="display: flex; justify-content: space-around">
 				<div class="buisness-div">
