--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="buisness-div">
 					<img class="buisness-image" src="./images/coffee1.jpg" width="240" height="160" align="left" />
 					<span class="buisness-text">
-						<h4 class="buisness-title">Buisness 1</h4>
+						<h4 class="buisness-title">Buissness 1</h4>
 						<p>WE ARE 200 DEGREES COFFEE, specialist coffee roasters and unashamed coffee geeks. Our aim is to create the perfect cup of coffee so we ship the finest green beans from Rainforest Alliance farms back to the UK where tweed-clad artisans use the traditional art of roasting (at 200° Centigrade) to give a full bodied, smoother taste.
 						</p>
 					</span>
