--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 					<img class="buisness-image" src="./images/coffee1.jpg" width="240" height="160" align="left" />
 					<span class="buisness-text">
 						<h4 class="buisness-title">Buisness 1</h4>
-						<p>WE ARE 200 DEGREES COFFEE, specialist coffee roasters and unashamed coffee geeks. Our aim is to create the perfect cup of coffee so we ship the finest green beans from Rainforest Alliance farms back to the UK where tweed-clad artisans use the traditional art of roasting (at 200° Centigrade) to give a full bodied, smoother taste.
+						<p>
+							WE ARE 200 DEGREES COFFEE, specialist coffee roasters and unashamed coffee geeks. 
+							Our aim is to create the perfect cup of coffee so we ship the finest green beans from Rainforest Alliance 
+							farms back to the UK where tweed-clad artisans use the traditional art of roasting (at 200° Centigrade) 
+							to give a full bodied, smoother taste.
 						</p>
 					</span>
 				</div>
@@ -48,7 +52,11 @@
 					<img class="buisness-image" src="./images/coffee2.jpg" width="240" height="160" align="left" />
 					<span class="buisness-text">
 						<h4 class="buisness-title">Buisness 2</h4>
-						<p>WE ARE 200 DEGREES COFFEE, specialist coffee roasters and unashamed coffee geeks. Our aim is to create the perfect cup of coffee so we ship the finest green beans from Rainforest Alliance farms back to the UK where tweed-clad artisans use the traditional art of roasting (at 200° Centigrade) to give a full bodied, smoother taste.
+						<p>
+							Since 1971, it always has been and will always be about quality. 
+							We’re passionate about ethically sourcing only the finest Arabica beans 
+							and roasting them with great care. 
+							At Starbucks, our passion for coffee is rivaled only by our love of sharing it.
 						</p>
 					</span>
 				</div>
@@ -70,7 +78,10 @@
 					<img class="buisness-image" src="./images/coffee3.jpg" width="240" height="160" align="left" />
 					<span class="buisness-text">
 						<h4 class="buisness-title">Buisness 3</h4>
-						<p>WE ARE 200 DEGREES COFFEE, specialist coffee roasters and unashamed coffee geeks. Our aim is to create the perfect cup of coffee so we ship the finest green beans from Rainforest Alliance farms back to the UK where tweed-clad artisans use the traditional art of roasting (at 200° Centigrade) to give a full bodied, smoother taste.
+						<p>
+							10 years ago, our Flat White took this coffee-loving nation by storm. 
+							A velvety smooth storm that’s still going strong today. 
+							Just one of the many reasons why you've kept us as your favourite coffee shop for the 10th year running.
 						</p>
 					</span>
 				</div>
@@ -92,7 +103,10 @@
 					<img class="buisness-image" src="./images/coffee4.jpg" width="240" height="160" align="left" />
 					<span class="buisness-text">
 						<h4 class="buisness-title">Buisness 4</h4>
-						<p>WE ARE 200 DEGREES COFFEE, specialist coffee roasters and unashamed coffee geeks. Our aim is to create the perfect cup of coffee so we ship the finest green beans from Rainforest Alliance farms back to the UK where tweed-clad artisans use the traditional art of roasting (at 200° Centigrade) to give a full bodied, smoother taste.
+						<p>
+							There are no shortcuts to sourcing great coffee. 
+							The journey we embarked on years ago, and continue to this day, can’t be rushed.
+							Our resident Coffee Master knows this. 
 						</p>
 					</span>
 				</div>
@@ -114,7 +128,11 @@
 					<img class="buisness-image" src="./images/coffee5.jpg" width="240" height="160" align="left" />
 					<span class="buisness-text">
 						<h4 class="buisness-title">Buisness 5</h4>
-						<p>WE ARE 200 DEGREES COFFEE, specialist coffee roasters and unashamed coffee geeks. Our aim is to create the perfect cup of coffee so we ship the finest green beans from Rainforest Alliance farms back to the UK where tweed-clad artisans use the traditional art of roasting (at 200° Centigrade) to give a full bodied, smoother taste.
+						<p>
+							WE ARE 200 DEGREES COFFEE, specialist coffee roasters and unashamed coffee geeks. 
+							Our aim is to create the perfect cup of coffee so we ship the finest green beans from Rainforest Alliance 
+							farms back to the UK where tweed-clad artisans use the traditional art of roasting (at 200° Centigrade) 
+							to give a full bodied, smoother taste.
 						</p>
 					</span>
 				</div>
