--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="./main.css">
 		<!-- link to icon -->
-		<link rel="shortcut icon" type="image/x-icon" href="">
+		<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<div class="centering-header">
